<resources>
    <string name="app_name">RussianRoulette</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button_reload">Reload</string>
    <string name="textViewBang">Bang!!!</string>
</resources>
